--- a/gateway/ChangeLog
+++ b/gateway/ChangeLog
@@ -1,3 +1,78 @@
+2009-11-01 Alexander Malysh <amalysh at kannel.org>
+    * gw/numhash.c, gw/bb_smscconn.c: fixed possible crash by reloading
+      white/blask lists via HTTP interface.
+
+2009-10-22 Alexander Malysh <amalysh at kannel.org>
+    * gw/dlr_mssql.c, gw/dlr_mysql.c, gw/dlr_oracle.c, gw/dlr_pgsql.c, gw/dlr_sdb.c:
+      added warnings if DLR was not inserted/updated/deleted but no error occurs
+      e.g. row to update not found.
+      Thanks to Nikos Balkanas <nbal at amdtelecom.net> for this patch.
+      [Msg-Id: <001801ca530c$43c24ac0$02b2a8c0@tardis>
+
+2009-10-13 Alexander Malysh <amalysh at kannel.org>
+    * gw/dlr_mysql.c: applied patch that fixes table name and field names that
+      use reserved keywords.
+      See http://dev.mysql.com/doc/refman/5.0/en/identifiers.html for details.
+      Thanks to Vincent CHAVANIS <v.chavanis at telemaque.fr> for this patch.
+
+2009-09-20 Alexander Malysh <amalysh at kannel.org>
+    * gw/msg.c: fixed crash when wrong packet received on bearerbox port.
+      Thanks to Michael Zervakis <michael at zervakis.com> for report.
+      [Msg-Id: <4AB3A08C.3050408@zervakis.com>]
+
+2009-09-17  Stipe Tolj  <stolj at kannel.org>
+    * doc/userguide.xml: document the 'smsc = loopback' type.
+    * gw/smscconn[_p].[ch]: add the loopback SMSC type to the internal 
+      structures.
+    * gw/smsc/smsc_loopback.c: add loopback SMSC type module.
+      [Msg-Id: <4A4B9245.1030705@tolj.org>]
+
+2009-09-04 Alexander Malysh <amalysh at kannel.org>
+    * aclocal.m4, configure, configure.in, gw/dlr_mysql.c, gwlib/dbpool_mysql.c,
+      test/test_dbpool.c: implemented select/update function calls for dbpool_mysql. This
+      require mysql prepared statement support and therefore mysql version >= 4.1.
+      Changed dlr_mysql to use these new function calls. This fixes #258.
+
+2009-09-03 Alexander Malysh <amalysh at kannel.org>
+    * gw/smsc/smpp_pdu.c: fixed memory leak.
+
+2009-09-02 Alexander Malysh <amalysh at kannel.org>
+    * doc/userguide/userguide.xml, gw/smsc/smpp_pdu.[ch], gw/smsc/smsc_smpp.c, test/drive_smpp.c,
+      test/drive_smpp.conf, test/test_smsc.c: implemented smsc-id config option for smpp-tlv group.
+
+2009-09-01 Alexander Malysh <amalysh at kannel.org>
+    * gw/bearerbox.c: fixed memory leak
+
+2009-08-31 Alejandro Guerrieri <aguerrieri at kannel.org>
+    * gw/bb_smscconn.c, gw/bearerbox.c, gw/bearerbox.h,
+      doc/userguide/userguide.xml: limit of 1M messages on outgoing queue limit
+      documented. Small code cleanup.
+
+2009-08-28 Andreas Fink <andreas at fink.org>
+    * util/start-stop-daemon.c: fix compilation under MacOS X 10.6
+
+2009-08-28 Alexander Malysh <amalysh at kannel.org>
+    * gw/bb_smscconn.c: always initialize msgdata because too many parts in
+      kannel expect msgdata non NULL.
+
+2009-08-24 Alexander Malysh <amalysh at kannel.org>
+    * gw/smsc/smsc_at.c: fixed timeout value passed to select. This should fix #514.
+
+2009-08-12 Alexander Malysh <amalysh at kannel.org>
+    * gw/smsc/smsc_at.[ch]: changes as follows:
+      - changed at2_read_line to first try buffer and only then try to read from device.
+        This should give us some speedup.
+      - populate timeout to select. This fixes to high CPU usage.
+      - more error handling.
+      - variuos fixes.
+
+2009-08-07 Alexander Malysh <amalysh at kannel.org>
+    * gw/dlr_oracle.c: fixed table name in dlr_flush_oracle.
+
+2009-07-28 Alexander Malysh <amalysh at kannel.org>
+    * gw/numhash.[ch]: increase numhash precision from 9,18 to 19,38 on 32,64bit respectively.
+      This is possible by using C99 standard type long long.
+
 2009-07-21  Stipe Tolj  <stolj at kannel.org>
     * gw/smsc/smsc_smpp.c: fix compile error for --disable-ssl builds. NLC.
       Thanks to Gottfried Huber <gottfried.huber at siemens.com> for reporting.
